🔄 Update: Thêm tranDu.html và sửa link từ index

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
   <header>
     <div class="logo">
       <a href="index.html">
-        <img src="Images/logo_ThuyDuy.png" alt="KaylinGame Logo">
+        <img src="Images/logo.png" alt="KaylinGame Logo">
       </a>
     </div>
     <nav>
@@ -201,7 +201,7 @@
         <a href="tiny-mini.html">
             <img src="Images/2_1.jpg" alt="Tiny Mini Game Cover">
             <div class="info">
-              <h3>[TungDuy] Tiny Mini</h3>
+              <h3>[Unity] Tiny Mini</h3>
               <p>Khám phá thế giới tí hon đầy phiêu lưu trong Tiny Mini!</p>
             </div>
         </a>
@@ -211,7 +211,7 @@
         <a href="the-reveger.html">
             <img src="Images/1.jpg" alt="The Reveger Game Cover">
             <div class="info">
-              <h3>[Thúy Duy]The Reveger</h3>
+              <h3>[Unity]The Reveger</h3>
               <p>Đắm mình vào cuộc báo thù đầy kịch tính trong The Reveger!</p>
             </div>
         </a>
@@ -219,15 +219,23 @@
 
       <div class="card">
         <a href="#">
-            <img src="Images/images_demo3.jpg" alt="Pokemon Game Cover">
+            <img src="Images/scarlet-violet-map-ai-1659557720105.jpg" alt="Pokemon Game Cover">
             <div class="info">
-              <h3>[Dự Án] Pokemon: Vùng Đất Vietnam</h3>
-              <p>Hành trình trở thành Bậc Thầy Pokemon đang chờ đón bạn!</p>
+              <h3>[Dự Án] Legamon:  Vietnam</h3>
+              <p>dự án có multiplayer giúp người chơi tương tác trực tuyến với nhau !</p>
             </div>
         </a>
       </div>
-
-    </div>
+      <div class="card">
+  <a href="tranDu.html">
+      <img src="Images/1n.png" alt="TranDu App Cover">
+      <div class="info">
+        <h3>[Mobile] Ứng Dụng TranDu</h3>
+        <p>Thông dịch ngôn ngữ thông minh - Flutter Dart</p>
+      </div>
+  </a>
+</div>
+      </div>
   </div>
 </body>
 </html>
