--- a/the-reveger.html
+++ b/the-reveger.html
@@ -154,7 +154,7 @@
     <header>
         <div class="logo">
             <a href="index.html">
-                <img src="Images/logo_ThuyDuy.png" alt="KaylinGame Logo">
+                <img src="Images/logo.png" alt="KaylinGame Logo">
             </a>
         </div>
         <nav>
