--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
         </a>
       </div>
       <div class="card">
-  <a href="tranDu.html">
+  <a href="TranDu.html">
       <img src="Images/1n.png" alt="TranDu App Cover">
       <div class="info">
         <h3>[Mobile] Ứng Dụng TranDu</h3>
